fix: return the resolve you fool!

--- a/src/lib/components/home/index.html
+++ b/src/lib/components/home/index.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>{{$ctrl.hello}} Welcome!</h1>
+  <h1>{{$ctrl.hello}}</h1>
 </div>
 
 <button ng-click="$ctrl.change()">Click Me!</button>
