--- a/src/lib/components/home/index.html
+++ b/src/lib/components/home/index.html
@@ -1,5 +1,7 @@
 <div>
   <h1>{{$ctrl.hello}}</h1>
 </div>
-
-<button ng-click="$ctrl.change()">Click Me!</button>
+<form>
+  <input type="text" ng-model="$ctrl.newGreeting">
+  <button ng-click="$ctrl.change()">Click Me!</button>
+</form>
